Bug 251899 - Can't rename files during import from camera
Summary: Can't rename files during import from camera
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: AdvancedRename-Import (other bugs)
Version First Reported In: 1.4.0
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-21 10:26 UTC by Anders Lund
Modified: 2022-02-01 06:24 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.5.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Anders Lund 2010-09-21 10:26:50 UTC
Version:           1.4.0
OS:                Linux

When importing images from my Canon EOS 30D camera, i can not rename the filenames with image properties.

The text of the filename generator input becomes red, and the [date] or [cam] part of the filename is not added.

This is a regression since the last relase (1.4), it used to work since forever.


Reproducible: Always

Steps to Reproduce:
try to import images with filename generator "[date]-####"

Actual Results:  
Files named something like "-0001.CR2"


Expected Results:  
Files named something like "20100921T1025-0001.CR2"


OS: Linux (i686) release 2.6.35-ARCH
Compiler: gcc
Comment 1 caulier.gilles 2010-09-21 10:31:53 UTC
*** Bug 251768 has been marked as a duplicate of this bug. ***
Comment 2 Andi Clemens 2010-09-25 11:38:46 UTC
Hmm I can not reproduce the error here... maybe it is camera specific?
Comment 3 Tomek 2010-09-25 20:43:25 UTC
(In reply to comment #2)
> Hmm I can not reproduce the error here... maybe it is camera specific?
Andi please notice that there is another bug (marked as duplicate) for the same issue. Both were reported by Canon camera users (PowerShot A470 and EOS 30D). Maybe it is camera-specific. Nevertheless it worked fine for 1.3.0 and doesn't work for 1.4.0.

Please fix it, it makes digikam useless to me :(

--
Tomek
Comment 4 Andi Clemens 2010-09-25 21:01:06 UTC
It seems like this problem is only occurring when using PTP mode, if I use a CardReader device, it works perfectly. Strange...
Comment 5 Anders Lund 2010-09-25 21:37:15 UTC
Is the code reading these data in digikam, or in some library - maybe gphoto?
Comment 6 Andi Clemens 2010-09-25 22:34:02 UTC
SVN commit 1179554 by aclemens:

Due to the refactoring of the AdvancedRename utility by introducing the
AdvancedRenameManager, we forgot to set the DateTime object when reading images
from a camera device. Because of this, date based renaming options returned wrong values.
The problem should be fixed now.

BUG: 251899

 M  +2 -1      NEWS  
 M  +46 -18    tests/advancedrenametest.cpp  
 M  +8 -1      utilities/advancedrename/advancedrenamedialog.cpp  
 M  +13 -21    utilities/advancedrename/advancedrenamemanager.cpp  
 M  +3 -4      utilities/advancedrename/advancedrenamemanager.h  
 M  +1 -0      utilities/advancedrename/common/parsesettings.h  
 M  +8 -0      utilities/advancedrename/parser/options/dateoption.cpp  
 M  +7 -5      utilities/cameragui/cameraiconview.cpp  
 M  +5 -4      utilities/queuemanager/queuelist.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1179554
Comment 7 Tomek 2010-09-25 22:55:15 UTC
(In reply to comment #4)
> It seems like this problem is only occurring when using PTP mode, if I use a
> CardReader device, it works perfectly. Strange...
I confirm, it works fine from CardReader.

Thanks for this tip - now I can download my pictures!

--
Tomek