Due to the refactoring of the AdvancedRename utility by introducing the AdvancedRenameManager, we forgot to set the DateTime object when reading images from a camera device. Because of this, date based renaming options returned wrong values. The problem should be fixed now.

BUG: 251899

svn path=/trunk/extragear/graphics/digikam/; revision=1179554